patch: fix issue with border spacing on events cards and image location on profile banner

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_eventCards.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_eventCards.scss
@@ -44,7 +44,7 @@
                 }
             }
         }
-    }  
+    }
 
     &-view-more {
         text-align: right;
@@ -58,6 +58,7 @@
     &__link {
         border-bottom: 7px solid;
         border-color: $stockport-teal-darker;
+        box-sizing: border-box;
     }
 
     &__image {
